editorial detail mobile wip

--- a/src/assets/sass/base/_general.scss
+++ b/src/assets/sass/base/_general.scss
@@ -132,6 +132,15 @@ div {
   &--primary-greece {
     background-color: var(--cor-primary-greece); 
   }
+  &--secondary-greece {
+    background-color: var(--cor-secondary-greece); 
+  }
+  &--primary-tanzania {
+    background-color: var(--cor-primary-tanzania); 
+  }
+  &--secondary-tanzania {
+    background-color: var(--cor-secondary-tanzania); 
+  }
 }
 
 .pointer-events {
