--- a/src/assets/sass/layout/_spacing-dimension.scss
+++ b/src/assets/sass/layout/_spacing-dimension.scss
@@ -38,7 +38,7 @@ Uso de clases de gap (`.g`):
     }
 
     // Viewport Heights -- ONLY ON DESKTOP
-    @each $size, $value in (50: 50vh, 100: var(--full-vh), 150: 150vh, 175: 175vh, 300: 300vh) {
+    @each $size, $value in (50: 50vh, 80: 80vh, 100: var(--full-vh), 150: 150vh, 175: 175vh, 300: 300vh) {
         &--vh-#{$size} {
             height: $value;
         }
@@ -57,6 +57,20 @@ Uso de clases de gap (`.g`):
         &-mbl {
             @include media-breakpoint-down(md) {
                 height: 100% !important; // Mobile variant
+            }
+        }
+    }
+
+    &--w-max-50 {
+        max-width: 50%;
+    }
+
+    &--w-max-100 {
+        max-width: 100%;
+
+        &-mbl {
+            @include media-breakpoint-down(md) {
+                max-width: 100% !important;
             }
         }
     }
@@ -116,7 +130,7 @@ Uso de clases de gap (`.g`):
         @include media-breakpoint-down(md) {
             @each $i, $value in (0: 0rem, 1: 0.25rem, 2: 0.5rem, 3: 1rem, 4: 1.5rem, 5: 3rem, 6: 6.25rem) {
                 &--#{$i}-mbl {
-                    padding: $value;
+                    padding: $value !important;
                 }
             }
         }
