new mbl fixes editorials

--- a/src/assets/sass/layout/_spacing-dimension.scss
+++ b/src/assets/sass/layout/_spacing-dimension.scss
@@ -42,6 +42,12 @@ Uso de clases de gap (`.g`):
         &--vh-#{$size} {
             height: $value;
         }
+
+        @include media-breakpoint-down(md) {
+            &--vh-#{$size}-mbl {
+                height: $value !important;
+            }
+        }
     }
 
     // Viewport Widths -- ONLY ON DESKTOP
