--- a/src/assets/sass/pages/nav/_navbar.scss
+++ b/src/assets/sass/pages/nav/_navbar.scss
@@ -160,6 +160,7 @@
             max-width: 100%; // Ajusta el tamaño según sea necesario
             height: auto;
             object-fit: contain;
+            border-radius: 10px;
         }
 
         &--submenu {
