--- a/src/assets/sass/pages/_editorials-detail.scss
+++ b/src/assets/sass/pages/_editorials-detail.scss
@@ -77,6 +77,9 @@
       }
 
       &__image {
+        @include media-breakpoint-down(md){
+          display: none;
+        }
         & img {
           max-width: 50%;
           height: auto;
