--- a/src/assets/sass/abstracts/_variables.scss
+++ b/src/assets/sass/abstracts/_variables.scss
@@ -13,6 +13,8 @@
     --cor-secondary-greece: #054421;
     --cor-primary-tanzania: #B83A25;
     --cor-secondary-tanzania: #F0EBC5;
+    --cor-primary-dolomites: #405131;
+    --cor-secondary-dolomites: #9BA376;
     --cor-navbar-light: #EBE6E0;
     --cor-cursor-mix: color-burn;
 }
