--- a/src/assets/sass/base/_general.scss
+++ b/src/assets/sass/base/_general.scss
@@ -141,6 +141,12 @@ div {
   &--secondary-tanzania {
     background-color: var(--cor-secondary-tanzania); 
   }
+  &--primary-dolomites {
+    background-color: var(--cor-primary-dolomites); 
+  }
+  &--secondary-dolomites {
+    background-color: var(--cor-secondary-dolomites); 
+  }
 }
 
 .pointer-events {
