--- a/src/assets/sass/base/_text.scss
+++ b/src/assets/sass/base/_text.scss
@@ -200,6 +200,12 @@ Ejemplo: <p class="b1 b1-md">Este texto ajustará su tamaño en pantallas median
     &--secondary-tanzania {
       color: var(--cor-secondary-tanzania);
     }
+    &--primary-dolomites {
+      color: var(--cor-primary-dolomites); 
+    }
+    &--secondary-dolomites {
+      color: var(--cor-secondary-dolomites); 
+    }
   }
 
   &-style {
