--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -10,6 +10,8 @@ body.light-theme {
     --cor-secondary-greece: #054421;
     --cor-primary-tanzania: #B83A25;
     --cor-secondary-tanzania: #F0EBC5;
+    --cor-primary-dolomites: #405131;
+    --cor-secondary-dolomites: #9BA376;
 }
 
 body.dark-theme {
@@ -24,6 +26,8 @@ body.dark-theme {
     --cor-secondary-greece: #B8D0EC;
     --cor-primary-tanzania: #F0EBC5;
     --cor-secondary-tanzania: #B83A25;
+    --cor-primary-dolomites: #9BA376;
+    --cor-secondary-dolomites: #405131;
 }
 
 // FONTS
