--- a/src/assets/sass/layout/_spacing-dimension.scss
+++ b/src/assets/sass/layout/_spacing-dimension.scss
@@ -66,7 +66,15 @@ Uso de clases de gap (`.g`):
             }
         }
     }
+    &--h-90 {
+        height: 90% !important;
 
+        &-mbl {
+            @include media-breakpoint-down(md) {
+                height: 90% !important; // Mobile variant
+            }
+        }
+    }
     &--w-max-50 {
         max-width: 50%;
     }
