--- a/src/assets/sass/pages/_about-page.scss
+++ b/src/assets/sass/pages/_about-page.scss
@@ -116,6 +116,9 @@
       line-height: 80px;
       font-style: italic;
       font-weight: 400;
+      @include media-breakpoint-down(md){
+        font-size: 19vw;
+      }
     }
 
     &-list {
@@ -138,6 +141,10 @@
     position: sticky;
     height: 600px;
     width: 500px;
+
+    @include media-breakpoint-down(lg){
+      width: 100%;
+    }
   }
 
   &__clip-path-item {
