--- a/src/assets/sass/pages/footer/_footer.scss
+++ b/src/assets/sass/pages/footer/_footer.scss
@@ -1,82 +1,115 @@
 .footer__section {
-    position: relative;
-    z-index:100000;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    background-color: var(--cor-primary);
+  position: relative;
+  z-index: 100000;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  background-color: var(--cor-primary);
 
-    &-3d-logo {
-        flex-grow: 1 !important;
-    }
+  &-3d-logo {
+    flex-grow: 1 !important;
+  }
 
-    &-links {
-        margin-top: auto;
-    }
+  &-links {
+    margin-top: auto;
+  }
 }
 
 .footer__carrusel {
-    &-wrapper {
-        display: flex;
-        justify-content: flex-start;
-        overflow: hidden;
-        padding-top: 120px;
-        color: var(--cor-secondary);
+  &-wrapper {
+    display: flex;
+    justify-content: flex-start;
+    overflow: hidden;
+    padding-top: 120px;
+    color: var(--cor-secondary);
 
-        /* Pausa la animación y cambia el color del texto y logo en hover */
-        &:hover .footer__carrusel-item {
-            animation-play-state: paused;
-            color: var(--cor-light);
-            /* Cambia el color del texto */
-        }
-
-        &:hover .footer__carrusel-item .footer__carrusel-item--logo {
-            background-color: var(--cor-light);
-            /* Cambia el color del logo */
-        }
+    /* Pausa la animación y cambia el color del texto y logo en hover */
+    &:hover .footer__carrusel-item {
+      animation-play-state: paused;
+      color: var(--cor-light);
+      /* Cambia el color del texto */
     }
 
-    &-item{
-        display: flex;
-        justify-content: center;
-        white-space: nowrap;
-        animation: move-rtl 6000ms linear infinite;
-        animation-play-state: running;
-        transition: color 0.3s ease;
-
-        &--text{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: auto;
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            overflow: visible;
-            line-height: 0.9;
-        }
-
-        &--logo{
-            
-            width: 75px;
-            height: 75px;
-            margin: 0 2rem;
-            background-color: var(--cor-secondary);
-            mask-image: url('/logo-dark.svg');
-            mask-size: contain;
-            mask-repeat: no-repeat;
-            mask-position: center;
-            transition: background-color 0.3s ease;
-        }
+    &:hover .footer__carrusel-item .footer__carrusel-item--logo {
+      background-color: var(--cor-light);
+      /* Cambia el color del logo */
     }
+  }
+
+  &-item {
+    display: flex;
+    justify-content: center;
+    white-space: nowrap;
+    animation: move-rtl 6000ms linear infinite;
+    animation-play-state: running;
+    transition: color 0.3s ease;
+
+    &--text {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: auto;
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      overflow: visible;
+      line-height: 0.9;
+    }
+
+    &--logo {
+      width: 75px;
+      height: 75px;
+      margin: 0 2rem;
+      background-color: var(--cor-secondary);
+      mask-image: url("/logo-dark.svg");
+      mask-size: contain;
+      mask-repeat: no-repeat;
+      mask-position: center;
+      transition: background-color 0.3s ease;
+    }
+  }
 }
 
 @keyframes move-rtl {
-    0% {
-        transform: translateX(0);
-    }
+  0% {
+    transform: translateX(0);
+  }
 
-    100% {
-        transform: translateX(-100%);
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+.footer__section-mobile {
+  & h1 {
+    & span {
+      font-size: 40px;
+      display: inline-block !important;
+      margin-left: 15px;
     }
+    & span:before {
+      display: inline-block;
+      color: var(--cor-secondary) !important;
+    }
+  }
+
+  &__social {
+    width: 100%;
+    position: absolute;
+    bottom: 50px;
+    display: flex;
+    left: 0;
+    align-items: center;
+    justify-content: center;
+
+    &--links {
+      display: flex;
+    }
+  }
+
+  &__site-by-syp {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+  }
 }
