--- a/src/components/NewAnimatedButton/NewAnimatedButton.scss
+++ b/src/components/NewAnimatedButton/NewAnimatedButton.scss
@@ -19,7 +19,7 @@
   }
 
   // Texto dentro del botón
-  .button-text {
+  & .button-text {
     font-family: "gunterz", sans-serif;
     font-size: 12px;
     position: relative;
@@ -32,7 +32,7 @@
   }
 
   // Círculo negro que crece (hover)
-  .hover-circle {
+  & .hover-circle {
     position: absolute;
     top: 50%;
     left: 50%;
