--- a/src/assets/sass/base/_text.scss
+++ b/src/assets/sass/base/_text.scss
@@ -181,6 +181,10 @@ Ejemplo: <p class="b1 b1-md">Este texto ajustará su tamaño en pantallas median
       color: var(--cor-light);
     }
 
+    // &--dark {
+    //   color: #EBE6E0 !important;
+    // }
+
     &--navbar-light {
       color: var(--cor-navbar-light);
     }
