--- a/src/assets/sass/pages/nav/_navbar.scss
+++ b/src/assets/sass/pages/nav/_navbar.scss
@@ -1,203 +1,200 @@
 .header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+  background: transparent;
+  transition: mix-blend-mode 0.3s ease-in-out;
+
+  &--inverted {
+    @supports (mix-blend-mode: difference) {
+      mix-blend-mode: difference;
+    }
+  }
+
+  &--fixed-top {
     position: fixed;
     top: 0;
+    left: 0;
     width: 100%;
-    z-index: 1000;
-    background: transparent;
-    transition: mix-blend-mode 0.3s ease-in-out;
-
-    &--inverted {
-        @supports (mix-blend-mode: difference) {
-            mix-blend-mode: difference;
-        }
-    }
-
-
-    &--fixed-top {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        z-index: 10300000; // Matching Bootstrap's z-index for fixed elements
-    }
+    z-index: 10300000; // Matching Bootstrap's z-index for fixed elements
+  }
 }
 
 .cus-navbar {
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    padding: $cor-navbar-padding-y $cor-navbar-padding-x;
-    color: var(--cor-navbar-light);
-    transition: transform 1.2s ease-in-out, opacity 1.2s ease-in-out;
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  padding: $cor-navbar-padding-y $cor-navbar-padding-x;
+  color: var(--cor-navbar-light);
+  transition: transform 1.2s ease-in-out, opacity 1.2s ease-in-out;
 
-    &__logo--centered {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        z-index: 1051;
+  &__logo--centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1051;
 
-        @include media-breakpoint-down(xl) {
-            display: none;
-        }
-    }
-
-    &__container {
-        @include media-breakpoint-up(xl) {
-            justify-content: space-between;
-        }
-
-        display: flex;
-        flex-wrap: inherit;
-        align-items: center;
-        width: 100%;
-        justify-content: flex-end;
-        padding-right: 3rem;
-        padding-left: 3rem;
-        margin-right: auto;
-        margin-left: auto;
-        position: relative;
-        text-transform: uppercase;
-        font-family: "gunterz",
-        sans-serif;
-    }
-
-    &__links--list {
-        @include media-breakpoint-down(xl) {
-            flex-direction: column;
-        }
-
-        display: flex;
-        flex-direction: row;
-        padding-left: 0;
-        margin-bottom: 0;
-        list-style: none;
-        align-items: center;
-    }
-
-    &__links--item-link {
-        @include media-breakpoint-up(xl) {
-            padding-right: 0.94rem;
-            padding-left: 0.94rem;
-            font-size: 1rem;
-        }
-
-        display: block;
-        font-size: 2rem;
-        text-decoration: none;
-        transition: color 0.15s ease-in-out,
-        background-color 0.15s ease-in-out,
-        border-color 0.15s ease-in-out;
-    }
-
-    // Burger menu button
-    &__burger {
-        display: none;
-        background: none;
-        border: none;
-        cursor: pointer;
-        flex-direction: column;
-        justify-content: space-around;
-        z-index: 1100;
-
-        .burger-line {
-            width: 100%;
-            height: 3px;
-            background-color: var(--cor-navbar-light);
-            transition: all 0.3s ease-in-out;
-        }
-
-        @include media-breakpoint-down(xl) {
-            display: flex;
-        }
-    }
-
-    // Dropdown menu
-    &__mbl {
-        display: none;
-        flex-direction: column;
-        position: fixed;
-        top: 0;
-        right: 0;
-        padding: 1rem;
-        width: 200px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        z-index: 1050;
-
-        &::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: var(--cor-primary); // Cambia al color que desees
-            // opacity: 0.8; // Define el nivel de opacidad
-            z-index: -1; // Envía el fondo detrás del contenido
-        }
-
-        &--links {
-            &-list {
-                list-style: none;
-                margin: 0;
-                padding: 0;
-            }
-
-            &-item {
-                margin: 10px 0;
-            }
-        }
-
-        &--image-container {
-            width: 100%;
-            text-align: center;
-            padding: 1rem 0;
-        }
-
-        &--image {
-            max-width: 100%; // Ajusta el tamaño según sea necesario
-            height: auto;
-            object-fit: contain;
-            border-radius: 10px;
-        }
-
-        &--submenu {
-            line-height: 1.5rem;
-            font-family: 'Gamilia';
-            text-align: right;
-            list-style: none;
-        }
-    }
-
-    // Responsive styles
     @include media-breakpoint-down(xl) {
-        &__links {
-            display: none;
-
-            &--left,
-            &--right {
-                display: none;
-            }
-        }
-
-        &__mbl--open {
-            display: flex;
-            height: 100vh;
-            width: 100vw;
-            // background-color: var(--cor-primary);
-            justify-content: flex-end;
-        }
+      display: none;
     }
+  }
+
+  &__container {
+    @include media-breakpoint-up(xl) {
+      justify-content: space-between;
+    }
+
+    display: flex;
+    flex-wrap: inherit;
+    align-items: center;
+    width: 100%;
+    justify-content: flex-end;
+    padding-right: 3rem;
+    padding-left: 3rem;
+    margin-right: auto;
+    margin-left: auto;
+    position: relative;
+    text-transform: uppercase;
+    font-family: "gunterz", sans-serif;
+  }
+
+  &__links--list {
+    @include media-breakpoint-down(xl) {
+      flex-direction: column;
+    }
+
+    display: flex;
+    flex-direction: row;
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none;
+    align-items: center;
+  }
+
+  &__links--item-link {
+    @include media-breakpoint-up(xl) {
+      padding-right: 0.94rem;
+      padding-left: 0.94rem;
+      font-size: 1rem;
+    }
+
+    display: block;
+    font-size: 2rem;
+    text-decoration: none;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+      border-color 0.15s ease-in-out;
+  }
+
+  // Burger menu button
+  &__burger {
+    display: none;
+    background: none;
+    border: none;
+    cursor: pointer;
+    flex-direction: column;
+    justify-content: space-around;
+    z-index: 1100;
+
+    .burger-line {
+      width: 100%;
+      height: 3px;
+      background-color: var(--cor-navbar-light);
+      transition: all 0.3s ease-in-out;
+    }
+
+    @include media-breakpoint-down(xl) {
+      display: flex;
+    }
+  }
+
+  // Dropdown menu
+  &__mbl {
+    display: none;
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    right: 0;
+    padding: 1rem;
+    width: 200px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    z-index: 1050;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: var(--cor-primary); // Cambia al color que desees
+      // opacity: 0.8; // Define el nivel de opacidad
+      z-index: -1; // Envía el fondo detrás del contenido
+    }
+
+    &--links {
+      &-list {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+      }
+
+      &-item {
+        margin: 10px 0;
+      }
+    }
+
+    &--image-container {
+      width: 100%;
+      text-align: center;
+      padding: 1rem 0;
+    }
+
+    &--image {
+      max-height: 650px;
+      max-width: 100%; // Ajusta el tamaño según sea necesario
+      height: auto;
+      object-fit: contain;
+      border-radius: 10px;
+    }
+
+    &--submenu {
+      line-height: 1.5rem;
+      font-family: "Gamilia";
+      text-align: right;
+      list-style: none;
+    }
+  }
+
+  // Responsive styles
+  @include media-breakpoint-down(xl) {
+    &__links {
+      display: none;
+
+      &--left,
+      &--right {
+        display: none;
+      }
+    }
+
+    &__mbl--open {
+      display: flex;
+      height: 100vh;
+      width: 100vw;
+      // background-color: var(--cor-primary);
+      justify-content: flex-end;
+    }
+  }
 }
 
 .glow-text {
-    text-shadow: -0.05em 0 0.02em var(--cor-light),
-        0 0 0.3em var(--cor-light);
+  text-shadow: -0.05em 0 0.02em var(--cor-light), 0 0 0.3em var(--cor-light);
 
-    color: var(--cor-light);
-    /* Blanco para resaltar el efecto */
+  color: var(--cor-light);
+  /* Blanco para resaltar el efecto */
 
-    /* Opcional: Mejora la visibilidad del glow */
+  /* Opcional: Mejora la visibilidad del glow */
 }
