neraly finished theme button

--- a/src/assets/sass/abstracts/_variables.scss
+++ b/src/assets/sass/abstracts/_variables.scss
@@ -7,8 +7,10 @@
     --cor-secondary: #DA6A2D;
     --cor-dark: #323232;
     --cor-light: #EBE6E0;
-    --cor-gray: #71827b;
-    --cor-warm-gray: #b7bfbc;
+    --cor-button-light: #EBE6E0;
+    --cor-button-green: #2F4F4F;
+    --cor-button-dark: #131313;
+    --cor-button-purple: #301A4B;
     --cor-primary-greece: #B8D0EC;
     --cor-secondary-greece: #054421;
     --cor-primary-tanzania: #B83A25;
