Floating theme button

--- a/src/assets/sass/pages/_contact-page.scss
+++ b/src/assets/sass/pages/_contact-page.scss
@@ -115,7 +115,7 @@
 
     &.icon-mail:before {
       content: "\e905";
-      color: var(--cor-primary);
+      color: var(--cor-secondary);
     }
   }
 
